--- a/mirror.html
+++ b/mirror.html
@@ -169,10 +169,9 @@ c.oncontextmenu = function(e){
 
 p = [{x:0,y:0,z:0}, {x:10,y:0,z:0}, {x:0,y:10,z:0}, {x:0,y:0,z:10}];
 
-var ResX = 70, ResY = 1, Radius = 100;
+var ResX = 40, ResY = 2, Radius = 100;
 for(var x = 0; x <  Math.PI/2; x += Math.PI / ResX){
 
-  console.log(r);
   for(var y = 0; y < 2 * Math.PI; y += Math.PI / r * ResY){
     var r =  Radius * Math.cos(x);
     var z = Radius * Math.sin(x);
@@ -298,7 +297,8 @@ setInterval(function(){
   
   t.beginPath();
   
-  t.moveTo(p[4]._x, p[4]._y);
+  t.moveTo(rp[4]._x, rp[4]._y);
+  
   for(var l = rp.length,i=5;i<l;i++){
 		if(rp[i] && !isNaN(rp[i]._x) && !isNaN(rp[i]._y)){
 			
